# Coursework/Databases/Backend/app/internal/api/report/api.go
@@ -21,8 +21,8 @@ type API struct{ service Service }
 func NewAPI(service Service) *API { return &API{service: service} }
 func (a *API) BuildPath() string  { return "/api/report" }
 func (a *API) RegisterHandlers(group *gin.RouterGroup) {
-	group.POST("/sales/excel", common.Wrap(a.createSalesReport))
-	group.POST("/employees/excel", common.Wrap(a.createEmployeesReport))
-	group.POST("/inventory/excel", common.Wrap(a.createInventoryReport))
-	group.POST("/menu-popularity/excel", common.Wrap(a.createMenuPopularityReport))
+	group.POST("/sales/pdf", common.Wrap(a.createSalesReport))
+	group.POST("/employees/pdf", common.Wrap(a.createEmployeesReport))
+	group.POST("/inventory/pdf", common.Wrap(a.createInventoryReport))
+	group.POST("/menu-popularity/pdf", common.Wrap(a.createMenuPopularityReport))
 }
